Partial fix 236, Track Selector button size too small.
Make the selector more selective so order matters less.

Verified manually.

BUG=236
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/10172044

--- a/src/tracing/timeline_view.css
+++ b/src/tracing/timeline_view.css
@@ -146,8 +146,8 @@
   font-size: 14px;
   height: 19px;
   margin: 1px;
+  min-width: 23px;
   text-align: center;
-  width: 23px;
 }
 
 .button:hover {
