--- a/src/tracing/tracks/track_selector.css
+++ b/src/tracing/tracks/track_selector.css
@@ -7,10 +7,10 @@
   display: none;
 }
 .track-selector {
-    -webkit-flex-direction: column;
-    background-color: whitesmoke;
-    border: 1px solid gray;
-    display: -webkit-flex;
+  -webkit-flex-direction: column;
+  background-color: whitesmoke;
+  border: 1px solid gray;
+  display: -webkit-flex;
 }
 .track-selector-anchor {
   position: relative;
@@ -19,7 +19,4 @@
   position: absolute;
   top: 1.5em;
   z-index: 1;
-}
-.track-selector-button {
-  width: auto;
 }
